--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
 :root{
   width: 100%;
     height: 100%;
@@ -34,7 +35,8 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  
+  overflow-x: hidden;
+  margin: 0 1fr 0 1fr;
 }
 .profile-content > h1 {
   font-family: neonderthawregular;
@@ -44,9 +46,6 @@ body {
 .carousel {
   height: 383px;
   margin-bottom: 20px;
-}
-.about {
-  font-family:'Courier New', Courier, monospace;
 }
 .color {
   color: #FF28B9;
@@ -60,7 +59,39 @@ nav {
   position: fixed;
   left: 0;
   top: 50%;
+  transform: translateY(-50%);
+  padding-left: 30px;
+  height: 300px;
   background-color: #FF28B9;
-  opacity: 50%;
+  display: flex;
+  align-items: center;
+}
+
+nav > ul {
+  padding: 0;
+}
+nav > ul > li {
+  list-style: none;
+}
+
+.about-content {
+  display: flex;
+  align-items: center;
+  background-color: rgba(195, 1, 126, .5);
+}
+.about-content > p {
+  width: 500px;
+}
+.about-content > img {
+  border-radius: 30%;
+  padding-left: 20px;
+  
+}
+.skills-content {
+  display: flex;
+  flex-direction: row;
+}
+.skills-content > div {
+  margin: 0 20px 0 20px
 }
 
