--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,14 @@
   font-style: normal;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
 :root{
   width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
+  
+  position: relative;
 }
 
 .slider-single-content {
@@ -18,32 +21,32 @@
 }
 
 body {
-  background-color: black;
-  color: #28D7FE;
+  background-color: rgb(22, 22, 22);
+  color: #ffffff;
   margin: 0;
   border: 0;
   font-family:'Courier New', Courier, monospace;
 }
 
 .App {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   left: 0;
   bottom: -20px;
-  right: -20px; 
-  overflow: scroll;
+  right: -20px;  */
+  
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  overflow-x: hidden;
-  margin: 0 1fr 0 1fr;
+  
+  
 }
 
 .main-content{
   padding: 0 50px 0 50px;
-  background-color: rgb(22, 22, 22);
-  width: 70vw ;
+  background-color: black;
+  max-width: 80vw ;
 }
 .profile-content {
   display: flex;
@@ -51,6 +54,7 @@ body {
   align-items: center;
   flex-direction: column;
 }
+
 .neonFont {
   font-family: neonderthawregular;
   font-size: 4rem;
@@ -80,9 +84,10 @@ body {
   height: fit-content;
   color: inherit;
   text-decoration: none;
+  
 }
-.md {
-  font-size: 64px;
+.logo-header > .md {
+  font-size: 64px;  
 }
 
 .color {
@@ -98,44 +103,77 @@ nav {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  padding-left: 30px;
-  height: 300px;
-  background-color: #FF28B9;
+  padding-left: 25px;
+  background-color: rgba(0, 0, 0, 1);
+  border-top-right-radius: 25%;
+  border-bottom-right-radius: 25%;
   display: flex;
-  align-items: center;
+  text-align: left;
 }
 
-nav > ul {
+ul {
   padding: 0;
 }
 nav > ul > li {
-  list-style: none;
+  font-size: 20px;
+  font-weight: 900;
+  margin: 12px;
+  display: flex;
 }
 
+nav > ul > li:hover {
+  color: #28D7FE;;
+}
+li{
+  list-style: none;
+}
 .about-content {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(195, 1, 126, .5);
+  box-shadow: #28D7FE 1px 0 20px;
+  margin: 30px 0 30px 0;
+  border-radius: 25px;
+  flex-wrap: wrap;
 }
 .about-content > p {
-  width: 500px;
+  margin-left: 10px;
+  text-align: left;
+  font-size: large;
+  
 }
 .about-content > img {
+  width: 250px;
   border-radius: 30%;
-  padding-left: 20px;
-  
+  margin: 10px 10px 10px 30px;
+  box-shadow: #28D7FE 1px 0 20px;
 }
 .skills-content {
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-.skills-content > div {
-  margin: 0 20px 0 20px
+  flex-wrap: wrap;
 }
 
-
+.list-skill {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+}
+.list-skill > li {
+  font-size: larger;
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+.list-skill > li > img {
+  filter: grayscale(1);
+  width: 50px;
+  height: 50px;
+}
+.list-skill > li > img:hover {
+  filter: none;
+}
 .flux {
   color: #426DFB;
   text-shadow: 0 0 3vw #2356FF;
@@ -147,7 +185,10 @@ nav > ul > li {
   -webkit-animation: flux 2s linear infinite;
   -o-animation: flux 2s linear infinite;
 }
-
+h2 {
+  color: #28D7FE;
+  text-decoration: underline;
+}
 @keyframes flux {
   0%,
   100% {
@@ -181,4 +222,47 @@ nav > ul > li {
   -webkit-animation: fluxHover 2s linear infinite;
   -o-animation: fluxHover 2s linear infinite;
   animation-delay: 50ms;
+}
+
+.projects-content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.project-card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 300px;
+  height: 700px;
+  margin: 20px;
+}
+.project-card > img {
+  width: 300px;
+  height: 250px;
+}
+.card-links {
+  margin-bottom: 10px;
+}
+.card-links > a {
+  margin: 10px;
+  
+
+  font-size: larger;
+}
+.tool-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
+.tool-list > li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+}
+.tool-list > li > img {
+  width: 50px;
+  height: 50px;
 }
