--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
 html {
-    height: 100%;
+    height: auto;
   }
   
   body {
-    height: 100%;
+    height: auto;
   }
   
-  div#root {
-    height: 100%; /* remove this line to see div.app is no more 100% height */
+#root {
+    height: auto; /* remove this line to see div.app is no more 100% height */
+    
   }
   
   div.app {
